chore: update tabs

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,16 +3,12 @@ title: Documentation
 description: "Read Speakeasy documentation for more information on our features and how to use them."
 ---
 
-import { SearchBarDocs } from "~/lib/inkeep/base";
-import { Banner, GenerateSDK, GenerateTerraformProviders, TestApis, GovernApis, Support } from "~/features/docs/home";
-import { IconGrid } from "~/features/shared/recipes";
-import { ProductCards } from "~/features/docs/home/recipes";
-import { DocsOffering } from "~/features/docs/home/recipes";
-import { SignUpButton } from "~/features/shared/recipes";
-import { OpenAPIIcon, CalendarIcon, OpenBookIcon, LogsIcon } from "~/components/jsx-icons";
-import { supportedLanguages } from "@/lib/data/docs/languages";
 
-<Banner />
+
+Docs overview please replace me with content
+
+
+{/* <Banner />
 
 ## Products
 <div className="py-8">
@@ -64,4 +60,4 @@ import { supportedLanguages } from "@/lib/data/docs/languages";
     />
 </div>
 
-<Support />
+<Support /> */}
