--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -3,13 +3,6 @@ title: Introduction
 description: "Introduction to Speakeasy."
 ---
 
-import { SignUpButton } from "~/features/shared/recipes";
-
-import ref_architecture from '@/content/docs/assets/ref-architecture.png';
-import { ProductCards } from "~/features/docs/home/recipes";
-
-import Image from "next/image";
-import vsCodeImageUrl from "@/content/docs/assets/vscode.svg"
 
 # Introduction to Speakeasy
 
@@ -29,18 +22,18 @@ That's the problem Speakeasy exists to solve.
 
 ## Speakeasy Products
 
-<div className="py-8">
+{/* <div className="py-8">
     <div className="max-w-7xl mx-auto">
         <ProductCards />
     </div>
-</div>
+</div> */}
 
 ## Before you Begin
 
 ### Sign up
 Sign up for a free Speakeasy account at [https://app.speakeasy.com](https://app.speakeasy.com).
 
-<SignUpButton className="w-fit my-8"/>
+{/* <SignUpButton className="w-fit my-8"/> */}
 
 New accounts start with a 14 day free trial of Speakeasy's business tier, to enable users to try out every SDK generation feature. At the end of the trial, accounts will revert to the free tier. No credit card is required.
 
@@ -76,7 +69,7 @@ choco install speakeasy
 
 ## Workflow
 
-<div align="center">
+<div style={{textAlign: "center"}}>
     ![ref_architecture](./assets/ref-architecture.png)
 </div>
 
