--- a/docs/languages/php/oss-comparison-php.mdx
+++ b/docs/languages/php/oss-comparison-php.mdx
@@ -1,5 +1,3 @@
-
-
 # OpenAPI PHP SDK creation: Speakeasy vs open source
 
 Many of our users have switched from [OpenAPI Generator](https://openapi-generator.tech/) to Speakeasy for their PHP SDKs. Learn how to use both SDK creators in this guide, and the differences between them.
@@ -8,25 +6,32 @@ Open-source OpenAPI generators are great for experimentation but lack the reliab
 
 Here's the high-level summary of the differences between Speakeasy and OpenAPI Generator:
 
-| Feature               | Speakeasy                    | OpenAPI Generator                      |
-| --------------------- | ---------------------------- | -------------------------------------- |
-| OpenAPI 3.0 support   | ✅                           | ✅                                     |
-| OpenAPI 3.1 support   | ✅                           | ❌                                     |
-| Laravel integration   | ✅                           | ❌                                     |
-| Code readability      | Concise, human-readable code | Verbose, messy code                    |
-| Files generated       | 84 granular separation       | 16 less separation                     |
-| Code generated        | 3,915 lines                  | 6,316 lines                            |
-| PHP version support   | PHP 8.1+                     | PHP 7.4+                               |
-| Type safety           | ✅                           | ❌                                     |
-| Runtime type checking | ✅ JMS Serializer            | ❌                                     |
-| Serialization         | ✅ JMS Serializer            | ✅ PHP extensions                      |
-| Enum support          | ✅                           | ⚠️ Uses constant strings and functions |
-| OAuth 2.0 support       | ⚠️ Coming soon               | ❌                                     |
-| Content type support  | JSON and form                  | JSON, form, and XML                    |
-| Async support         | ❌                           | ✅                                     |
-| Union type handling   | ✅                           | ⚠️ Creates custom implementation       |
-| Documentation         | ✅                           | ⚠️ Examples may lack required fields   |
-| CI/CD integration     | ✅                           | ❌                                     |
+<Table
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "openapi", header: "OpenAPI Generator" }
+  ]}
+  data={[
+    { feature: "OpenAPI 3.0 support", speakeasy: "✅", openapi: "✅" },
+    { feature: "OpenAPI 3.1 support", speakeasy: "✅", openapi: "❌" },
+    { feature: "Laravel integration", speakeasy: "✅", openapi: "❌" },
+    { feature: "Code readability", speakeasy: "Concise, human-readable code", openapi: "Verbose, messy code" },
+    { feature: "Files generated", speakeasy: "84 granular separation", openapi: "16 less separation" },
+    { feature: "Code generated", speakeasy: "3,915 lines", openapi: "6,316 lines" },
+    { feature: "PHP version support", speakeasy: "PHP 8.1+", openapi: "PHP 7.4+" },
+    { feature: "Type safety", speakeasy: "✅", openapi: "❌" },
+    { feature: "Runtime type checking", speakeasy: "✅ JMS Serializer", openapi: "❌" },
+    { feature: "Serialization", speakeasy: "✅ JMS Serializer", openapi: "✅ PHP extensions" },
+    { feature: "Enum support", speakeasy: "✅", openapi: "⚠️ Uses constant strings and functions" },
+    { feature: "OAuth 2.0 support", speakeasy: "⚠️ Coming soon", openapi: "❌" },
+    { feature: "Content type support", speakeasy: "JSON and form", openapi: "JSON, form, and XML" },
+    { feature: "Async support", speakeasy: "❌", openapi: "✅" },
+    { feature: "Union type handling", speakeasy: "✅", openapi: "⚠️ Creates custom implementation" },
+    { feature: "Documentation", speakeasy: "✅", openapi: "⚠️ Examples may lack required fields" },
+    { feature: "CI/CD integration", speakeasy: "✅", openapi: "❌" }
+  ]}
+/>
 
 In this post, we'll do a technical deep dive on creating PHP SDKs using both Speakeasy and OpenAPI Generator, then we'll compare the generated SDKs.
 
@@ -112,11 +117,26 @@ docker run --rm -v "./app:/local" openapitools/openapi-generator-cli generate -i
 
 OpenAPI Generator creates three folders:
 
-| Folder | Content                                                                                                                                                                                                                                                                                                                                                    |
-| ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `docs` | Documentation in `.md` files for each object.                                                                                                                                                                                                                                                                                                              |
-| `lib`  | PHP code to call the API on the server, includes a `Model` folder containing a file for each object in the schema and an `Api` folder containing a file for each tag in the schema. If you pass [parameters](https://openapi-generator.tech/docs/generators/php#config-options) to the build command, you can rename `Api`, for example, to `PetstoreSdk`. |
-| `test` | Unit test stubs for all objects and operations. The test stubs are empty, leaving testing logic to the developer.                                                                                                                                                                                                                                          |
+<Table
+  columns={[
+    { key: "folder", header: "Folder" },
+    { key: "content", header: "Content" }
+  ]}
+  data={[
+    { 
+      folder: "`docs`", 
+      content: "Documentation in `.md` files for each object." 
+    },
+    { 
+      folder: "`lib`", 
+      content: "PHP code to call the API on the server, includes a `Model` folder containing a file for each object in the schema and an `Api` folder containing a file for each tag in the schema. If you pass [parameters](https://openapi-generator.tech/docs/generators/php#config-options) to the build command, you can rename `Api`, for example, to `PetstoreSdk`." 
+    },
+    { 
+      folder: "`test`", 
+      content: "Unit test stubs for all objects and operations. The test stubs are empty, leaving testing logic to the developer." 
+    }
+  ]}
+/>
 
 A warning from OpenAPI Generator in the terminal read:
 
@@ -136,10 +156,22 @@ docker run --rm -v "./app:/app" seimage speakeasy generate sdk --schema /app/sch
 
 Speakeasy gives multiple warnings about `xml request bodies are not currently supported` and creates the following folders.
 
-| Folder | Content                                                                                                                                                                                                                                  |
-| ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `docs` | Documentation in `.md` files for each component, operation, and SDK (tag).                                                                                                                                                               |
-| `src`  | PHP code to call the API on the server, containing a `Models` folder for each object and operation in the schema. The `src` folder also contains a `Utils` folder containing code for common functions, like security and date handling. |
+<Table
+  columns={[
+    { key: "folder", header: "Folder" },
+    { key: "content", header: "Content" }
+  ]}
+  data={[
+    { 
+      folder: "`docs`", 
+      content: "Documentation in `.md` files for each component, operation, and SDK (tag)." 
+    },
+    { 
+      folder: "`src`", 
+      content: "PHP code to call the API on the server, containing a `Models` folder for each object and operation in the schema. The `src` folder also contains a `Utils` folder containing code for common functions, like security and date handling." 
+    }
+  ]}
+/>
 
 Speakeasy does not create test stubs, as unit testing is performed on Speakeasy's generator instead of the generated SDK. Shipping unit tests for generated SDKs adds unnecessary complexity and dependencies.
 
@@ -329,10 +361,31 @@ cloc ./app/se/src
 
 Below are the results for each SDK.
 
-| Project           | Files | Blank lines | Comment lines | Code lines |
-| ----------------- | ----- | ----------- | ------------- | ---------- |
-| OpenAPI Generator | 16    | 1198        | 4267          | 6316       |
-| Speakeasy         | 84    | 1073        | 2214          | 3915       |
+<Table
+  columns={[
+    { key: "project", header: "Project" },
+    { key: "files", header: "Files" },
+    { key: "blank", header: "Blank lines" },
+    { key: "comment", header: "Comment lines" },
+    { key: "code", header: "Code lines" }
+  ]}
+  data={[
+    { 
+      project: "OpenAPI Generator", 
+      files: "16",
+      blank: "1198",
+      comment: "4267",
+      code: "6316"
+    },
+    { 
+      project: "Speakeasy", 
+      files: "84",
+      blank: "1073",
+      comment: "2214",
+      code: "3915"
+    }
+  ]}
+/>
 
 We see that the Speakeasy SDK has five times as many files as OpenAPI Generator, but 40% less code. The libraries Speakeasy uses, as well as shared utility functions, allow it to create more concise code than OpenAPI Generator.
 
@@ -347,22 +400,22 @@ Below is the output for OpenAPI Generator.
 
 ```sh
 ├── Api
-│   ├── PetApi.php
-│   ├── StoreApi.php
-│   └── UserApi.php
+│   ├── PetApi.php
+│   ├── StoreApi.php
+│   └── UserApi.php
 ├── ApiException.php
 ├── Configuration.php
 ├── HeaderSelector.php
 ├── Model
-│   ├── Address.php
-│   ├── ApiResponse.php
-│   ├── Category.php
-│   ├── Customer.php
-│   ├── ModelInterface.php
-│   ├── Order.php
-│   ├── Pet.php
-│   ├── Tag.php
-│   └── User.php
+│   ├── Address.php
+│   ├── ApiResponse.php
+│   ├── Category.php
+│   ├── Customer.php
+│   ├── ModelInterface.php
+│   ├── Order.php
+│   ├── Pet.php
+│   ├── Tag.php
+│   └── User.php
 └── ObjectSerializer.php
 ```
 
