--- a/openapi-hub/frameworks.mdx
+++ b/openapi-hub/frameworks.mdx
@@ -2,28 +2,20 @@
 description: "How to generate an OpenAPI schema from your code"
 ---
 
-
-
-import { TypescriptFrameworkGuidesData } from "~/data/shared/frameworkGuides";
-import { PythonFrameworkGuidesData } from "~/data/shared/frameworkGuides";
-import { GoFrameworkGuidesData } from "~/data/shared/frameworkGuides";
-import { JavaFrameworkGuidesData } from "~/data/shared/frameworkGuides";
-import { PHPFrameworkGuidesData } from "~/data/shared/frameworkGuides";
-import { getFilteredFrameworkData } from "~/data/shared/frameworkGuides";
-
 # Server Framework Guides
 
 Here, you'll find a comprehensive collection of step-by-step guides for generating OpenAPI specs for popular server frameworks in various languages. Or read our guide below for advice on how to generate an OpenAPI schema from your existing code base.
 
-<IconGrid {...TypescriptFrameworkGuidesData} />
+{/* <IconGrid {...TypescriptFrameworkGuidesData} /> */}
 
-<IconGrid {...PythonFrameworkGuidesData} />
+{/* <IconGrid {...PythonFrameworkGuidesData} /> */}
 
-<IconGrid {...GoFrameworkGuidesData} />
+{/* <IconGrid {...GoFrameworkGuidesData} /> */}
 
-<IconGrid {...JavaFrameworkGuidesData} />
+{/* <IconGrid {...JavaFrameworkGuidesData} /> */}
 
-<IconGrid {...PHPFrameworkGuidesData} />
+{/* <IconGrid {...PHPFrameworkGuidesData} />  */}
+
 
 # How to generate an OpenAPI schema from your code
 
