--- a/openapi-hub/frameworks/fastapi.mdx
+++ b/openapi-hub/frameworks/fastapi.mdx
@@ -54,7 +54,7 @@ Join us as we dive into FastAPI customization and discover how these tweaks can 
   fields in Pydantic models to enable the appropriate
   [validation](https://docs.pydantic.dev/latest/errors/validation_errors/#timezone_aware)
   and ensure your SDK behavior matches the response definition from your server.
-</Callout>{" "}
+</Callout>
 
 ## Basic FastAPI setup
 
