--- a/openapi-hub/frameworks/laravel.mdx
+++ b/openapi-hub/frameworks/laravel.mdx
@@ -13,13 +13,13 @@ import YouTube from "react-youtube";
   <YouTube videoId="dn5U_pidRw0" />
 </div>
 
-You’re investing in your API, and that means finally creating an OpenAPI spec that accurately describes your API. Of course you could write the document by hand, or use a GUI tool to make it easier. Or with just a bit of upfront work, you can generate a complete OpenAPI specification directly from your Laravel application.
+You're investing in your API, and that means finally creating an OpenAPI spec that accurately describes your API. Of course you could write the document by hand, or use a GUI tool to make it easier. Or with just a bit of upfront work, you can generate a complete OpenAPI specification directly from your Laravel application.
 
 Back in the time of Swagger documents, BeyondCode had a well known package for performing spec generation. However, with the advent of OpenAPI, a new package, [Scribe](https://scribe.knuckles.wtf/laravel), has become the go to for generating an OpenAPI Spec from a Laravel API.
 
 ## An Overview of Scribe
 
-Scribe is a robust documentation solution for PHP APIs. It helps you generate comprehensive human-readable documentation from your Laravel/Lumen/Dingo codebase. That includes HTML documentation, code samples, Postman Collections, and most importantly in our case, OpenAPI specifications.
+Scribe is a robust documentation solution for PHP APIs. It helps you generate comprehensive human-readable documentation from your Laravel/Lumen/Dingo codebase. That includes HTML documentation, code samples, Postman Collections, and most importantly in our case, OpenAPI specifications.
 
 So let’s start by installing the package using composer, and explore the options available.
 
