--- a/openapi-hub/frameworks/typespec.mdx
+++ b/openapi-hub/frameworks/typespec.mdx
@@ -11,9 +11,9 @@ description: "How to create OpenAPI schemas and SDKs from TypeSpec"
 
 So something that is _like_ OpenAPI, and also generates OpenAPI specifications? You may be asking yourself, why does TypeSpec exist? Like many people, our initial reaction to TypeSpec was to reference the iconic XKCD strip:
 
-<div align="center">
+<div style={{textAlign: "center"}}>
   <br />
-  <img src="https://imgs.xkcd.com/comics/standards_2x.png" width="70%" />
+  <img src="https://imgs.xkcd.com/comics/standards_2x.png" width="70%" alt="Standards" />
 </div>
 
 However, after spending some time with it, we've come to understand the justification for a new DSL - we'll cover some of that shortly. We also ran into this young language's rough edges, and we'll cover those in detail, too.
