--- a/openapi-hub/index.mdx
+++ b/openapi-hub/index.mdx
@@ -3,36 +3,24 @@ title: OpenAPI Reference
 description: Documentation of the OpenAPI Specification
 ---
 
-
-
-import { GenerateSDK } from "~/features/docs/home/recipes/ProductGrid/GenerateSDK";
-
-import { FrameworkGuidesData } from "~/data/shared/frameworkGuides";
-import {
-  CardsSection,
-  Hero,
-  QuickLinks,
-} from "~/features/openapi";
-import { Faq } from "~/features/pricing/recipes";
-
 <Callout title="Contribute to this page">
   This documentation is Open source. If you have any feedback, suggestions, or
   want to contribute, check out our [GitHub
   repo](https://github.com/speakeasy-api/openapi-reference-documentation).
 </Callout>
 
-<Hero
+{/* <Hero
   title="OpenAPI Hub"
   description="The all in one resource for understanding the OpenAPI Specification."
 />
 
 <IconGrid {...FrameworkGuidesData} buttonText="See all" buttonUrl="/openapi/frameworks" />
 
-<Separator className="opacity-10" />
+<Separator className="opacity-10" /> */}
 
 ### OpenAPI Overview
 
-<Spotlight>
+{/* <Spotlight> */}
 
 ## !!steps \`openapi`
 
@@ -149,9 +137,9 @@ Contains an optional list of reusable schemas that can be referenced from other 
 
 ---
 
-</Spotlight>
+{/* </Spotlight> */}
 
-<Separator className="opacity-10" />
+{/* <Separator className="opacity-10" />
 
 <CardsSection
   title="The OpenAPI Ecosystem"
@@ -198,4 +186,4 @@ Contains an optional list of reusable schemas that can be referenced from other 
         "That's a contentious topic, and there's no right answer. Typically startups with small technical teams generate their OpenAPI document from code. At larger companies where API design includes non-technical staff, handwriting the document is typically preferred. Find something that works for your team and don't listen to the noise.",
     },
   ]}
-/>
+/> */}
