--- a/docs/languages/python/oss-comparison-python.mdx
+++ b/docs/languages/python/oss-comparison-python.mdx
@@ -217,25 +217,25 @@ Below is the output for OpenAPI Generator.
 
 ```sh
 ├── api
-│   ├── __init__.py
-│   ├── pet_api.py
-│   ├── store_api.py
-│   └── user_api.py
+│   ├── __init__.py
+│   ├── pet_api.py
+│   ├── store_api.py
+│   └── user_api.py
 ├── api_client.py
 ├── api_response.py
 ├── configuration.py
 ├── exceptions.py
 ├── __init__.py
 ├── models
-│   ├── address.py
-│   ├── api_response.py
-│   ├── category.py
-│   ├── customer.py
-│   ├── __init__.py
-│   ├── order.py
-│   ├── pet.py
-│   ├── tag.py
-│   └── user.py
+│   ├── address.py
+│   ├── api_response.py
+│   ├── category.py
+│   ├── customer.py
+│   ├── __init__.py
+│   ├── order.py
+│   ├── pet.py
+│   ├── tag.py
+│   └── user.py
 ├── py.typed
 └── rest.py
 ```
@@ -247,65 +247,65 @@ Below is the output for Speakeasy.
 ```sh
 ├── basesdk.py
 ├── _hooks
-│   ├── __init__.py
-│   ├── registration.py
-│   ├── sdkhooks.py
-│   └── types.py
+│   ├── __init__.py
+│   ├── registration.py
+│   ├── sdkhooks.py
+│   └── types.py
 ├── httpclient.py
 ├── __init__.py
 ├── models
-│   ├── components
-│   │   ├── apiresponse.py
-│   │   ├── category.py
-│   │   ├── httpmetadata.py
-│   │   ├── __init__.py
-│   │   ├── order.py
-│   │   ├── pet.py
-│   │   ├── security.py
-│   │   ├── tag.py
-│   │   └── user.py
-│   ├── errors
-│   │   ├── __init__.py
-│   │   └── sdkerror.py
-│   ├── __init__.py
-│   └── operations
-│       ├── addpet_form.py
-│       ├── addpet_json.py
-│       ├── addpet_raw.py
-│       ├── createuser_form.py
-│       ├── createuser_json.py
-│       ├── createuser_raw.py
-│       ├── createuserswithlistinput.py
-│       ├── deleteorder.py
-│       ├── deletepet.py
-│       ├── deleteuser.py
-│       ├── findpetsbystatus.py
-│       ├── findpetsbytags.py
-│       ├── getinventory.py
-│       ├── getorderbyid.py
-│       ├── getpetbyid.py
-│       ├── getuserbyname.py
-│       ├── __init__.py
-│       ├── loginuser.py
-│       ├── logoutuser.py
-│       ├── placeorder_form.py
-│       ├── placeorder_json.py
-│       ├── placeorder_raw.py
-│       ├── updatepet_form.py
-│       ├── updatepet_json.py
-│       ├── updatepet_raw.py
-│       ├── updatepetwithform.py
-│       ├── updateuser_form.py
-│       ├── updateuser_json.py
-│       ├── updateuser_raw.py
-│       └── uploadfile.py
+│   ├── components
+│   │   ├── apiresponse.py
+│   │   ├── category.py
+│   │   ├── httpmetadata.py
+│   │   ├── __init__.py
+│   │   ├── order.py
+│   │   ├── pet.py
+│   │   ├── security.py
+│   │   ├── tag.py
+│   │   └── user.py
+│   ├── errors
+│   │   ├── __init__.py
+│   │   └── sdkerror.py
+│   ├── __init__.py
+│   └── operations
+│       ├── addpet_form.py
+│       ├── addpet_json.py
+│       ├── addpet_raw.py
+│       ├── createuser_form.py
+│       ├── createuser_json.py
+│       ├── createuser_raw.py
+│       ├── createuserswithlistinput.py
+│       ├── deleteorder.py
+│       ├── deletepet.py
+│       ├── deleteuser.py
+│       ├── findpetsbystatus.py
+│       ├── findpetsbytags.py
+│       ├── getinventory.py
+│       ├── getorderbyid.py
+│       ├── getpetbyid.py
+│       ├── getuserbyname.py
+│       ├── __init__.py
+│       ├── loginuser.py
+│       ├── logoutuser.py
+│       ├── placeorder_form.py
+│       ├── placeorder_json.py
+│       ├── placeorder_raw.py
+│       ├── updatepet_form.py
+│       ├── updatepet_json.py
+│       ├── updatepet_raw.py
+│       ├── updatepetwithform.py
+│       ├── updateuser_form.py
+│       ├── updateuser_json.py
+│       ├── updateuser_raw.py
+│       └── uploadfile.py
 ├── pet.py
 ├── sdkconfiguration.py
 ├── sdk.py
 ├── store.py
 ├── types
-│   ├── basemodel.py
-│   └── __init__.py
+│   ├── basemodel.py
+│   └── __init__.py
 ├── user.py
 └── utils
     ├── enums.py
@@ -323,7 +323,7 @@ Below is the output for Speakeasy.
     └── values.py
 ```
 
-The Speakeasy SDK is more complex and has more features. Files are separated at a lower level than OpenAPI Generator — at the operation level – and further split into media types of the operation, like `addpet_json.py`. There are more helper files bundled with the SDK in the `utils` folder. The `_hooks` folder allows you to [insert custom code](/docs/customize/code/sdk-hooks) into the SDK.
+The Speakeasy SDK is more complex and has more features. Files are separated at a lower level than OpenAPI Generator — at the operation level - and further split into media types of the operation, like `addpet_json.py`. There are more helper files bundled with the SDK in the `utils` folder. The `_hooks` folder allows you to [insert custom code](/docs/customize/code/sdk-hooks) into the SDK.
 
 ## Calling the server
 
