--- a/guides/index.mdx
+++ b/guides/index.mdx
@@ -4,15 +4,13 @@ description: "Speakeasy guides"
 ---
 
 
-import { FrameworkGuidesData } from "~/data/shared/frameworkGuides";
-
 # Speakeasy guides
 
 Here, you'll find a comprehensive collection of step-by-step guides, best practices, and tutorials to help you get the most out of Speakeasy. Whether you're just getting started or looking to delve deeper into advanced features, our guides are tailored to support you at every step of your journey.
 
 If you haven't used OpenAPI before, start with our [guide to creating an OpenAPI schema from your existing code](openapi/frameworks).
 
-<IconGrid {...FrameworkGuidesData} />
+{/* <IconGrid {...FrameworkGuidesData} /> */}
 
 ## OpenAPI guides
 
