chore: update svg import

--- a/docs/prep-openapi/linting.mdx
+++ b/docs/prep-openapi/linting.mdx
@@ -6,7 +6,7 @@ sidebar_title: "Overview"
 
 import Image from "next/image";
 
-import vsCodeImageUrl from "@/content/docs/assets/vscode.svg";
+import vsCodeImageUrl from "../assets/vscode.svg";
 
 # OpenAPI document linting
 
