--- a/docs/speakeasy-reference/generation/gen-yaml.mdx
+++ b/docs/speakeasy-reference/generation/gen-yaml.mdx
@@ -1,7 +1,7 @@
 import Image from "next/image";
 
 
-import vsCodeImageUrl from "@/content/docs/assets/vscode.svg";
+import vsCodeImageUrl from "../../assets/vscode.svg";
 
 # The gen.yaml file reference
 
