--- a/docs/speakeasy-reference/workflow-file.mdx
+++ b/docs/speakeasy-reference/workflow-file.mdx
@@ -7,7 +7,7 @@ sidbar_label: Workflow File Reference
 import Image from "next/image";
 
 
-import vsCodeImageUrl from "@/content/docs/assets/vscode.svg";
+import vsCodeImageUrl from "../assets/vscode.svg";
 
 # Speakeasy Workflow File
 
