chore: update desc frontmatter

--- a/docs/terraform/entity-mapping.mdx
+++ b/docs/terraform/entity-mapping.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Map API Entities to Terraform Resources"
-description: "Learn how to map your API entities to Terraform resources and specify CRUD operations."
+description: |
+  Learn how to map your API entities to Terraform resources and specify CRUD operations.
 ---
 
 
