--- a/docs/terraform/property-customization.mdx
+++ b/docs/terraform/property-customization.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Customize Terraform Properties"
-description: "Learn how to customize property behavior and mapping in your Terraform provider."
+description: |
+  Learn how to customize property behavior and mapping in your Terraform provider.
 ---
 
 
