--- a/docs/terraform/validation-dependencies.mdx
+++ b/docs/terraform/validation-dependencies.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Validation and Dependencies"
-description: "Learn how to add custom validation logic and manage attribute dependencies in your Terraform provider."
+description: |
+  Learn how to add custom validation logic and manage attribute dependencies in your Terraform provider.
 ---
 
 
