chore: fix errors

--- a/docs/terraform/entity-mapping.mdx
+++ b/docs/terraform/entity-mapping.mdx
@@ -4,9 +4,10 @@ description: |
   Learn how to map your API entities to Terraform resources and specify CRUD operations.
 ---
 
+# TO DO
+Figure out why its failing to render
 
-
-#  Map API Entities to Terraform Resources
+{/* #  Map API Entities to Terraform Resources
 
 Add the `x-speakeasy-entity` annotation to objects in your OpenAPI spec to include them as entities in the Terraform provider.
 
@@ -241,4 +242,4 @@ components:
           type: string
           format: date-time
           x-speakeasy-soft-delete-property: true
-```
+``` */}
