--- a/docs/terraform/property-customization.mdx
+++ b/docs/terraform/property-customization.mdx
@@ -4,8 +4,10 @@ description: |
   Learn how to customize property behavior and mapping in your Terraform provider.
 ---
 
+# TO DO
+Figure out why its failing to render
 
-
+{/* 
 # Customize Terraform Properties
 
 ## Remap API Property to Terraform Attribute Name
@@ -148,4 +150,4 @@ components:
 
 <Callout title="Warning" type="warning">
 Applying this modifier when `x-speakeasy-entity-operation: my_resource#read` is not defined may result in drift between the Terraform plan and remote state should updates to attributes happen outside of Terraform changes. Please only apply this when necessary.
-</Callout>
+</Callout> */}
