--- a/docs/terraform/validation-dependencies.mdx
+++ b/docs/terraform/validation-dependencies.mdx
@@ -4,9 +4,10 @@ description: |
   Learn how to add custom validation logic and manage attribute dependencies in your Terraform provider.
 ---
 
+# TO DO
+Figure out why its failing to render
 
-
-# Validation and Dependencies
+{/* # Validation and Dependencies
 
 ##  Prevent Conflicting Attributes
 
@@ -180,4 +181,4 @@ In this scenario, when Speakeasy next generates the Terraform provider, it will 
 
 5. A validator can only be applied to a resource attribute. Validators cannot be applied at the same level as the `x-speakeasy-entity` annotation because that becomes the "root" of the Terraform resource. However, validators can access or refer to any data in the entire resource (for an example, see the `x-speakeasy-conflicts-with` validator). The annotation will be ignored for data sources.
 
-6. Speakeasy regenerations do not delete user-written code. If the validator is no longer in use, it will be ignored (no longer referenced) but the source file will remain. You might want to delete such an orphaned validation file for repository hygiene.
+6. Speakeasy regenerations do not delete user-written code. If the validator is no longer in use, it will be ignored (no longer referenced) but the source file will remain. You might want to delete such an orphaned validation file for repository hygiene. */}
