--- a/docs/testing.mdx
+++ b/docs/testing.mdx
@@ -3,8 +3,6 @@ title: Contract testing
 description: "Learn how to generate and run automated testing for your API and SDKs."
 ---
 
-import { LanguageTestingGrid } from "~/features/shared/recipes";
-import sdkTestingBillingImage from './assets/sdk-testing-billing.png'
 
 # Testing with Speakeasy
 
@@ -55,7 +53,9 @@ To enable testing features, you need the following:
 - An [Enterprise or Business tier account](/pricing).
 - Enable the SDK Testing add-on in `settings/billing` under your account.
 
-<Screenshot
+{/* TODO:
+Add back in */}
+{/* <Screenshot
   variant="web"
   url="app.speakeasy.com"
   image={{
@@ -64,7 +64,7 @@ To enable testing features, you need the following:
   }}
 />
 
-<LanguageTestingGrid />
+<LanguageTestingGrid /> */}
 
 ## Next Steps
 
