--- a/examples/[category].mdx
+++ b/examples/[category].mdx
@@ -1,12 +1,12 @@
 ---
 title: "Examples"
 description: "How to use Speakeasy's solutions"
-breadcrumb: false
 ---
 
-import { Category, getStaticPaths as getCategoryStaticPaths, getStaticProps as getCategoryStaticProps } from '~/features/examples/category';
+# TO DO
+Add back in
 
-<Category />
+{/* <Category />
 
 export const getStaticPaths = getCategoryStaticPaths;
-export const getStaticProps = getCategoryStaticProps;
+export const getStaticProps = getCategoryStaticProps; */}
