chore: remove error import

--- a/examples/index.mdx
+++ b/examples/index.mdx
@@ -3,6 +3,7 @@ title: "Examples"
 description: "Speakeasy examples"
 ---
 
-import { Examples } from '~/features/examples/home';
+# TO DO
+Add back in
 
-<Examples />
+{/* <Examples /> */}
