chore: update url

--- a/docs/prep-openapi/linting.mdx
+++ b/docs/prep-openapi/linting.mdx
@@ -8,7 +8,7 @@ import { Callout } from "@/components/ui/Callout";
 
 import Image from "next/image";
 
-import vsCodeImageUrl from "../assets/vscode.svg";
+import vsCodeImageUrl from "../assets/vscode.svg?url";
 
 # OpenAPI document linting
 
