--- a/docs/core-concepts.mdx
+++ b/docs/core-concepts.mdx
@@ -14,7 +14,7 @@ A workflow is how the Speakeasy platform defines the process of generating a [ta
 Workflows can be run locally for fast iteration, or via a set of GitHub Actions for production usage. For a complete reference of the GitHub workflow, see [the documentation](/docs/manage/github-setup).
 
 <div style={{textAlign:"center", width:"80%"}}>
-    ![Workflow diagram](./assets/core-concepts.svg)
+    ![Workflow diagram](./assets/core-concepts.svg?url)
 </div>
 
 ### Sources
