--- a/docs/speakeasy-reference/workflow-file.mdx
+++ b/docs/speakeasy-reference/workflow-file.mdx
@@ -8,7 +8,7 @@ import Image from "next/image";
 import { Callout } from "@/components/ui/Callout";
 import { Spotlight } from "@/components/codehike/Spotlight";
 
-import vsCodeImageUrl from "../assets/vscode.svg";
+import vsCodeImageUrl from "../assets/vscode.svg?url";
 
 # Speakeasy Workflow File
 
