chore: update youtube import

--- a/openapi-hub/frameworks/fastapi.mdx
+++ b/openapi-hub/frameworks/fastapi.mdx
@@ -3,7 +3,7 @@ title: How to generate an OpenAPI document with FastAPI
 description: "Creating an OpenAPI document with FastAPI and using it to generate SDKs with Speakeasy."
 ---
 
-import YouTube from "react-youtube";
+import YouTube from "@/components/Youtube";
 import { Callout } from "@/components/ui/Callout";
 import { Spotlight } from "@/components/codehike/Spotlight";
 
