--- a/openapi-hub/frameworks/laravel.mdx
+++ b/openapi-hub/frameworks/laravel.mdx
@@ -3,7 +3,7 @@ title: How To Generate a OpenAPI/Swagger Spec for Laravel APIs
 description: "Learn how to create a Swagger/OpenAPI spec for your Laravel API."
 ---
 
-import YouTube from "react-youtube";
+import YouTube from "@/components/Youtube";
 import { Spotlight } from "@/components/codehike/Spotlight";
 import { Callout } from "@/components/ui/Callout";
 
