chore: move docs home content

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,61 +3,20 @@ title: Documentation
 description: "Read Speakeasy documentation for more information on our features and how to use them."
 ---
 
+import { CardGrid, Heading, Text } from "@/mdx/components";
+import { cards, intro } from "@/lib/data/docs/overview";
 
 
-Docs overview please replace me with content
-
-
-{/* <Banner />
-
-## Products
-<div className="py-8">
-    <ProductCards variant="four" />
-</div>
-
----
-
-## Idiomatic SDKs
-<CardGrid cards={supportedLanguages}  />
-
-## SDK-enhanced documentation
-
-<DocsOffering />
-
----
-
-## Resources
-
-<div className="py-8">
-    <ProductCards
-        variant="four"
-        products={[
-            {
-                icon: <OpenAPIIcon />,
-                title: "OpenAPI Hub",
-                description: "All your OpenAPI questions — answered",
-                href: "/openapi"
-            },
-            {
-                icon: <OpenBookIcon />,
-                title: "API Design Guide",
-                description: "Best practices for designing RESTful APIs",
-                href: "/api-design"
-            },
-            {
-                icon: <LogsIcon />,
-                title: "Changelog",
-                description: "Stay up to date with the latest features and improvements",
-                href: "/changelog"
-            },
-            {
-                icon: <CalendarIcon />,
-                title: "Product Roadmap",
-                description: "See what's coming next for Speakeasy",
-                href: "https://speakeasy.productlane.com/roadmap"
-            }
-        ]}
-    />
-</div>
-
-<Support /> */}
+    <div className="container space-y-8">
+      {intro?.title && (
+        <Heading as="h1" variant="xl" className="text-foreground">
+          {intro.title}
+        </Heading>
+      )}
+      {intro?.subtitle && <Text>{intro.subtitle}</Text>}
+      <CardGrid cards={cards?.start} />
+      <CardGrid cards={cards?.quickstart} columns={2} heading="Start" />
+      <CardGrid columns={2} cards={cards?.learn} heading="Learn" />
+      <CardGrid cards={cards?.resources} heading="Resources" />
+      <CardGrid columns={2} cards={cards?.support} heading="Support" />
+    </div>
